@@ -1,3 +1,7 @@
+Wed Jul 30 09:36:07 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>
+
+	* rollout.c - prevent division by zero when jsds are small
+	
 Mon Jul 28 21:31:19 2003  Joern Thyssen  <jth@gnubg.org>
 
 	* gtkgame.c (InitGTK): new menu entry for IDLE (Python).
